# template-builder

./: .codacy.yml  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TROUBLESHOOTING.md
.github/workflows/: ci.yml  release.yml
docs/: EXECUTAR_TESTES.md  EXECUTAR_TESTES_CLION.md  EXECUTAR_TODOS_TESTES.md
docs/specs/: next_versions.md  rules.md
docs/specs/releases/v_0.1.0/: release.md  tasks.md  use-cases.md
docs/specs/releases/v_0.2.0/: release.md  tasks.md  use-cases.md
frontend/: .env.example  .prettierignore  .stylelintignore  .stylelintrc.json  README.md  angular.json  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.spec.json
frontend/src/: index.html  main.ts  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.routes.ts
frontend/src/app/components/footer/: footer.component.html  footer.component.spec.ts  footer.component.ts
frontend/src/app/components/header/: header.component.html  header.component.scss  header.component.ts
frontend/src/app/components/main/: main.component.html  main.component.scss  main.component.ts
frontend/src/app/components/menu/: menu.component.html  menu.component.scss  menu.component.ts
frontend/src/app/components/sidebar/: sidebar.component.html  sidebar.component.scss  sidebar.component.ts
frontend/src/app/core/config/: config.service.ts  environment.ts
frontend/src/app/models/: menu.interface.ts  social-network.interface.ts
frontend/src/app/pages/build-template-files/: build-template-files.component.html  build-template-files.component.ts
frontend/src/app/pages/build-template-functions/: build-template-functions.component.html  build-template-functions.component.scss  build-template-functions.component.ts
frontend/src/app/pages/build-template-introduction/: build-template-introduction.component.html  build-template-introduction.component.ts
frontend/src/app/pages/build-template-prompts/: build-template-prompts.component.html  build-template-prompts.component.scss  build-template-prompts.component.ts
frontend/src/app/pages/build-template-remote-files/: build-template-remote-files.component.html  build-template-remote-files.component.ts
frontend/src/app/pages/build-template-variables/: build-template-variables.component.html  build-template-variables.component.scss  build-template-variables.component.ts
frontend/src/app/pages/changelog/: changelog.component.html  changelog.component.scss  changelog.component.ts  changelog.model.ts
frontend/src/app/pages/home/: home.component.html  home.component.scss  home.component.ts
frontend/src/app/pages/home2/: home2.component.html  home2.component.scss  home2.component.ts
frontend/src/app/pages/installation/: installation.component.html  installation.component.scss  installation.component.ts
frontend/src/app/pages/terms-of-use/: terms-of-use.component.html  terms-of-use.component.scss  terms-of-use.component.ts
frontend/src/app/pages/using-template/: using-template.component.html  using-template.component.ts
frontend/src/environments/: environment.prod.ts  environment.ts
frontend/src/styles/: _palette-values.scss  _variables.scss
installer/: TERMS_OF_USE.rtf  TemplateBuilder.Bundle.wxs  TemplateBuilder.wxs  build-msi.ps1
old_src/: TemplateBuilder.dpr  TemplateBuilder.dproj
old_src/builders/: unFileBuilder.pas  unFolderBuilder.pas  unRemoteFileBuilder.pas
old_src/services/: unParseYAML.pas
old_src/types/: unFileType.pas  unPromptType.pas
samples/: download.yaml  readme.yaml  sample.yaml  wordpress-theme.yaml
samples/v_0.1/files/: compile-mo.php
src/: TemplateBuilder.dpr  TemplateBuilder.dproj  template-builder-lib.cpp  template-builder.cpp  template-builder.hpp
src/builders/: FileBuilder.cpp  FileBuilder.hpp  FolderBuilder.cpp  FolderBuilder.hpp  PromptBuilder.cpp  PromptBuilder.hpp  RemoteFileBuilder.cpp  RemoteFileBuilder.hpp  unBuildFiles.pas  unFileBuilder.pas  unPromptBuilder.pas  unVariableBuilder.pas
src/services/: ParseYAML.cpp  ParseYAML.hpp  unParseYAML.pas
src/types/: FileType.cpp  FileType.hpp  PromptType.cpp  PromptType.hpp  RemoteFileType.cpp  RemoteFileType.hpp  VariableType.cpp  VariableType.hpp  unFileType.pas  unRemoteFileType.pas  unVariableType.pas
tests/: CMakeLists.txt  README.md  test_FileBuilder.cpp  test_FileType.cpp  test_FolderBuilder.cpp  test_ParseYAML.cpp  test_PromptBuilder.cpp  test_PromptType.cpp  test_RemoteFileBuilder.cpp  test_VariableType.cpp  test_template-builder.cpp
